<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2019-2025, RTE (http://www.rte-france.com)
  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
  SPDX-License-Identifier: MPL-2.0
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>20</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-open-loadflow</artifactId>
    <version>1.15.0-SNAPSHOT</version>

    <name>powsybl open loadflow</name>
    <description>An open source loadflow based on PowSyBl</description>
    <url>http://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-open-loadflow.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-open-loadflow.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-open-loadflow</url>
    </scm>

    <developers>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Anne TILLOY</name>
            <email>anne.tilloy@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>

        <jafama.version>2.3.2</jafama.version>
        <slf4jtoys.version>1.6.3</slf4jtoys.version>
        <asciitable.version>0.3.2</asciitable.version>
        
        <powsybl-core.version>6.7.0-RC1</powsybl-core.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>templating-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>com/powsybl/openloadflow/network/**/*Factory*.class</include>
                                <include>com/powsybl/openloadflow/util/LoadFlowAssert.class</include>
                                <include>com/powsybl/openloadflow/util/LoadFlowResultBuilder.class</include>
                                <include>com/powsybl/openloadflow/sa/AbstractOpenSecurityAnalysisTest.class</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Compile dependencies -->
        <dependency>
            <groupId>de.vandermeer</groupId>
            <artifactId>asciitable</artifactId>
            <version>${asciitable.version}</version>
        </dependency>
        <dependency>
            <groupId>net.jafama</groupId>
            <artifactId>jafama</artifactId>
            <version>${jafama.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.usefultoys</groupId>
            <artifactId>slf4j-toys</artifactId>
            <version>${slf4jtoys.version}</version>
        </dependency>
        <dependency>
            <groupId>org.anarres.graphviz</groupId>
            <artifactId>graphviz-builder</artifactId>
        </dependency>

        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-iidm-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-iidm-extensions</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-loadflow-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-loadflow-results-completion</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-math</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-security-analysis-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-sensitivity-analysis-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-commons</artifactId>
        </dependency>

        <!-- Runtime dependencies -->

        <!-- Test dependencies -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-testlib</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.jimfs</groupId>
            <artifactId>jimfs</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-commons-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-config-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-ieee-cdf-converter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-iidm-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-iidm-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-psse-model-test</artifactId>
            <version>${powsybl-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-psse-converter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>

